--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.0-rc.1",
+    "styled-reset": "^4.4.7",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
